<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.htc.eleven.autotest.MainActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/item_checkbox_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="fill_vertical|left"
            android:text="@string/Question"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_audio"
            android:text="@string/AudioItem"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_video"
            android:text="@string/VideoItem"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_camera"
            android:text="@string/CameraItem"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_display"
            android:text="@string/DisplayItem"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_fingerprint"
            android:text="@string/FingerprintItem"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_sensor"
            android:text="@string/SensorItem"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_usb"
            android:text="@string/UsbItem"/>


    </LinearLayout>

    <Button
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/startTestBtn"
        android:text="@string/go"
        android:textAllCaps="false"
        android:gravity="bottom"

        app:layout_constraintTop_toBottomOf="@+id/item_checkbox_layout"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
